--- a/Web.config
+++ b/Web.config
@@ -21,6 +21,17 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <system.web>
+    <caching>
+      <outputCacheSettings>
+        <outputCacheProfiles>
+          <add name="1minute" duration="60"/>
+          <add name="30seconds" duration="30"/>
+        </outputCacheProfiles>
+      </outputCacheSettings>
+    </caching>
+    <customErrors mode="On">
+      <error statusCode="404" redirect="~/Exception/NotFound"/>
+    </customErrors>
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
