--- a/bin/MVC5.dll.config
+++ b/bin/MVC5.dll.config
@@ -12,7 +12,7 @@
     <!--<add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-MVC5-20151014041035.mdf;Initial Catalog=aspnet-MVC5-20151014041035;Integrated Security=True"
       providerName="System.Data.SqlClient" />-->
   <add name="DefaultConnection" connectionString="Data Source=TN;Initial Catalog=E_DOC2;Persist Security Info=True;User ID=sa;Password=p@ssw0rd88" providerName="System.Data.SqlClient"/>
-    <add name="SchoolContext" connectionString="Data Source=TN;Initial Catalog=E_DOC2;Persist Security Info=True;User ID=sa;Password=p@ssw0rd88" providerName="System.Data.SqlClient"/>
+    <!--<add name="SchoolContext" connectionString="Data Source=TN;Initial Catalog=E_DOC2;Persist Security Info=True;User ID=sa;Password=p@ssw0rd88" providerName="System.Data.SqlClient"/>-->
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
