--- a/Web.config
+++ b/Web.config
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=301880
@@ -11,7 +11,7 @@
   <connectionStrings>
     <!--<add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-MVC5-20151014041035.mdf;Initial Catalog=aspnet-MVC5-20151014041035;Integrated Security=True"
       providerName="System.Data.SqlClient" />-->
-  <add name="DefaultConnection" connectionString="Data Source=TN;Initial Catalog=E_DOC2;Persist Security Info=True;User ID=sa;Password=p@ssw0rd88" providerName="System.Data.SqlClient"/>
+  <add name="DefaultConnection" connectionString="Data Source=TN;Initial Catalog=NADI_ENGINE;Persist Security Info=True;User ID=sa;Password=p@ssw0rd88" providerName="System.Data.SqlClient" />
     <!--<add name="SchoolContext" connectionString="Data Source=TN;Initial Catalog=E_DOC2;Persist Security Info=True;User ID=sa;Password=p@ssw0rd88" providerName="System.Data.SqlClient"/>-->
   </connectionStrings>
   <appSettings>
@@ -24,13 +24,13 @@
     <caching>
       <outputCacheSettings>
         <outputCacheProfiles>
-          <add name="1minute" duration="60"/>
-          <add name="30seconds" duration="30"/>
+          <add name="1minute" duration="60" />
+          <add name="30seconds" duration="30" />
         </outputCacheProfiles>
       </outputCacheSettings>
     </caching>
-    <customErrors mode="On">
-      <error statusCode="404" redirect="~/Exception/NotFound"/>
+    <customErrors mode="Off">
+      <error statusCode="404" redirect="~/Exception/NotFound" />
     </customErrors>
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.5" />
@@ -45,23 +45,23 @@
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
         <assemblyIdentity name="Microsoft.Owin" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="1.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Microsoft.Owin.Security.OAuth" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="1.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Microsoft.Owin.Security.Cookies" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="1.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Microsoft.Owin.Security" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="1.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Newtonsoft.Json" culture="neutral" publicKeyToken="30ad4fe6b2a6aeed" />
-        <bindingRedirect oldVersion="0.0.0.0-6.0.0.0" newVersion="6.0.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-7.0.0.0" newVersion="7.0.0.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Web.Helpers" publicKeyToken="31bf3856ad364e35" />
@@ -81,7 +81,7 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="WebGrease" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="1.0.0.0-1.5.2.14234" newVersion="1.5.2.14234" />
+        <bindingRedirect oldVersion="0.0.0.0-1.5.2.14234" newVersion="1.5.2.14234" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
