--- a/MVC5.csproj
+++ b/MVC5.csproj
@@ -205,6 +205,10 @@
     <Compile Include="Migrations\201510202121262_Init.Designer.cs">
       <DependentUpon>201510202121262_Init.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201605141441585_updateUser.cs" />
+    <Compile Include="Migrations\201605141441585_updateUser.Designer.cs">
+      <DependentUpon>201605141441585_updateUser.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\BaseEntity.cs" />
@@ -327,6 +331,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201510202121262_Init.resx">
       <DependentUpon>201510202121262_Init.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201605141441585_updateUser.resx">
+      <DependentUpon>201605141441585_updateUser.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
