--- a/MVC5.csproj
+++ b/MVC5.csproj
@@ -196,6 +196,7 @@
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Controllers\StudentController.cs" />
+    <Compile Include="Controllers\TransactionController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -211,6 +212,26 @@
     <Compile Include="Migrations\201605141441585_updateUser.Designer.cs">
       <DependentUpon>201605141441585_updateUser.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201605141901557_addTransaction.cs" />
+    <Compile Include="Migrations\201605141901557_addTransaction.Designer.cs">
+      <DependentUpon>201605141901557_addTransaction.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201605141910053_changecolumntransaction.cs" />
+    <Compile Include="Migrations\201605141910053_changecolumntransaction.Designer.cs">
+      <DependentUpon>201605141910053_changecolumntransaction.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201605142033024_updateTransac.cs" />
+    <Compile Include="Migrations\201605142033024_updateTransac.Designer.cs">
+      <DependentUpon>201605142033024_updateTransac.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201605142050409_updateTransac2.cs" />
+    <Compile Include="Migrations\201605142050409_updateTransac2.Designer.cs">
+      <DependentUpon>201605142050409_updateTransac2.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201605142055326_updateTransac3.cs" />
+    <Compile Include="Migrations\201605142055326_updateTransac3.Designer.cs">
+      <DependentUpon>201605142055326_updateTransac3.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\BaseEntity.cs" />
@@ -223,6 +244,7 @@
     <Compile Include="Models\SchoolContext.cs" />
     <Compile Include="Models\SchoolInitializer.cs" />
     <Compile Include="Models\Student.cs" />
+    <Compile Include="Models\Transaction.cs" />
     <Compile Include="Models\VM\Course_Student.cs" />
     <Compile Include="Models\VM\EmailVO.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -311,6 +333,8 @@
     <Content Include="Views\Manage\Edit.cshtml" />
     <Content Include="Views\Manage\CreateCus.cshtml" />
     <Content Include="Views\Manage\Success.cshtml" />
+    <Content Include="Views\Transaction\Index.cshtml" />
+    <Content Include="Views\Transaction\Success.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Areas\Admin\Models\" />
@@ -338,6 +362,21 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201605141441585_updateUser.resx">
       <DependentUpon>201605141441585_updateUser.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201605141901557_addTransaction.resx">
+      <DependentUpon>201605141901557_addTransaction.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201605141910053_changecolumntransaction.resx">
+      <DependentUpon>201605141910053_changecolumntransaction.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201605142033024_updateTransac.resx">
+      <DependentUpon>201605142033024_updateTransac.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201605142050409_updateTransac2.resx">
+      <DependentUpon>201605142050409_updateTransac2.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201605142055326_updateTransac3.resx">
+      <DependentUpon>201605142055326_updateTransac3.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
