--- a/MVC5.csproj
+++ b/MVC5.csproj
@@ -249,6 +249,10 @@
     <Compile Include="Migrations\201702121850080_addlevelcol.Designer.cs">
       <DependentUpon>201702121850080_addlevelcol.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201702121951087_addstatusactivecol.cs" />
+    <Compile Include="Migrations\201702121951087_addstatusactivecol.Designer.cs">
+      <DependentUpon>201702121951087_addstatusactivecol.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\BaseEntity.cs" />
@@ -403,6 +407,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201702121850080_addlevelcol.resx">
       <DependentUpon>201702121850080_addlevelcol.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201702121951087_addstatusactivecol.resx">
+      <DependentUpon>201702121951087_addstatusactivecol.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
