--- a/MVC5.csproj
+++ b/MVC5.csproj
@@ -262,6 +262,10 @@
     <Compile Include="Migrations\201702122155178_alterfilecol.Designer.cs">
       <DependentUpon>201702122155178_alterfilecol.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201702130320203_addcol2.cs" />
+    <Compile Include="Migrations\201702130320203_addcol2.Designer.cs">
+      <DependentUpon>201702130320203_addcol2.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\BaseEntity.cs" />
@@ -429,6 +433,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201702122155178_alterfilecol.resx">
       <DependentUpon>201702122155178_alterfilecol.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201702130320203_addcol2.resx">
+      <DependentUpon>201702130320203_addcol2.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
