--- a/MVC5.csproj
+++ b/MVC5.csproj
@@ -4586,6 +4586,7 @@
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Shared\_Layout2.cshtml" />
     <Content Include="Views\_ViewStart2.cshtml" />
+    <Content Include="Views\Home\Tnc.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Areas\Admin\Models\" />
