--- a/MVC5.csproj
+++ b/MVC5.csproj
@@ -298,6 +298,10 @@
     <Compile Include="Migrations\201702270931403_addreftbl.Designer.cs">
       <DependentUpon>201702270931403_addreftbl.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201702270946488_updaterftbl.cs" />
+    <Compile Include="Migrations\201702270946488_updaterftbl.Designer.cs">
+      <DependentUpon>201702270946488_updaterftbl.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\BaseEntity.cs" />
@@ -4705,6 +4709,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201702270931403_addreftbl.resx">
       <DependentUpon>201702270931403_addreftbl.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201702270946488_updaterftbl.resx">
+      <DependentUpon>201702270946488_updaterftbl.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
