add offline page

--- a/MVC5.csproj
+++ b/MVC5.csproj
@@ -4606,7 +4606,6 @@
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Home\About.cshtml" />
     <Content Include="Views\Home\Contact.cshtml" />
-    <Content Include="Views\Home\Index2.cshtml" />
     <Content Include="Scripts\jquery-1.10.2.min.map" />
     <Content Include="Views\Account\_ExternalLoginsListPartial.cshtml" />
     <Content Include="Views\Account\ConfirmEmail.cshtml" />
@@ -4644,7 +4643,7 @@
     <Content Include="Views\Transaction\Success.cshtml" />
     <Content Include="Views\Manage\ApplyMembership.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
-    <Content Include="Views\Shared\_Layout2.cshtml" />
+    <Content Include="Views\Shared\_LayoutHome.cshtml" />
     <Content Include="Views\_ViewStart2.cshtml" />
     <Content Include="Views\Home\Tnc.cshtml" />
     <Content Include="Views\Transaction\MembershipRequest.cshtml" />
@@ -4652,6 +4651,8 @@
     <Content Include="Views\Transaction\MessageList.cshtml" />
     <Content Include="Views\Transaction\ReadMessage.cshtml" />
     <Content Include="Views\Shared\_MembershipFormPartial.cshtml" />
+    <Content Include="Views\Home\Offline.cshtml" />
+    <Content Include="Views\Shared\_LayoutOffline.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Areas\Admin\Models\" />
