update offline page

--- a/MVC5.csproj
+++ b/MVC5.csproj
@@ -4591,6 +4591,7 @@
     <Content Include="Scripts\respond.js" />
     <Content Include="Scripts\respond.min.js" />
     <Content Include="Scripts\_references.js" />
+    <Content Include="Views\Shared\app_offline.htm" />
     <Content Include="Web.config">
       <SubType>Designer</SubType>
     </Content>
