--- a/Web.config
+++ b/Web.config
@@ -11,7 +11,7 @@
   <connectionStrings>
     <!--<add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-MVC5-20151014041035.mdf;Initial Catalog=aspnet-MVC5-20151014041035;Integrated Security=True"
       providerName="System.Data.SqlClient" />-->
-  <!--<add name="DefaultConnection" connectionString="Data Source=tcp:s01.winhost.com;Initial Catalog=DB_110895_nadi;User ID=DB_110895_nadi_user;Password=ciko8989@;Integrated Security=False;" providerName="System.Data.SqlClient" />-->
+    <!--<add name="DefaultConnection" connectionString="Data Source=tcp:s01.winhost.com;Initial Catalog=DB_110895_nadi;User ID=DB_110895_nadi_user;Password=ciko8989@;Integrated Security=False;" providerName="System.Data.SqlClient" />-->
     <add name="DefaultConnection" connectionString="Data Source=PJ-NB-149;Initial Catalog=LELONG_ENGINE;Persist Security Info=True;User ID=sa;Password=p@ssw0rd" providerName="System.Data.SqlClient" />
     <!--<add name="SchoolContext" connectionString="Data Source=TN;Initial Catalog=E_DOC2;Persist Security Info=True;User ID=sa;Password=p@ssw0rd88" providerName="System.Data.SqlClient"/>-->
   </connectionStrings>
@@ -21,8 +21,16 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
+  <!--
+    For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
+
+    The following attributes can be set on the <httpRuntime> tag.
+      <system.Web>
+        <httpRuntime targetFramework="4.6" />
+      </system.Web>
+  -->
   <system.web>
-    <trust level="Full" /> 
+    <trust level="Full" />
     <caching>
       <outputCacheSettings>
         <outputCacheProfiles>
