--- a/MVC5.csproj
+++ b/MVC5.csproj
@@ -70,10 +70,6 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="System.Drawing" />
-    <Reference Include="System.IO.FileSystem.Primitives, Version=4.0.1.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
-      <HintPath>..\packages\System.IO.FileSystem.Primitives.4.0.1\lib\net46\System.IO.FileSystem.Primitives.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
     <Reference Include="System.IO.Packaging, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <HintPath>..\packages\System.IO.Packaging.4.0.0\lib\net46\System.IO.Packaging.dll</HintPath>
       <Private>True</Private>
@@ -4313,6 +4309,7 @@
     <Content Include="Content\img\hilidayvoucher.jpg" />
     <Content Include="Content\img\kadahli.jpg" />
     <Content Include="Content\img\Last-logo.png" />
+    <Content Include="Content\img\lelongpos.ico" />
     <Content Include="Content\img\nadilogo.png" />
     <Content Include="Content\img\nadilogoText.png" />
     <Content Include="Content\nadi.css" />
